--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "npm run build && vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "gen": "node ./scripts/gen.js"
   },
   "dependencies": {
     "axios": "^1.2.0",
