--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cn.vuejs.org-guide",
   "version": "1.0.1",
-  "description": "Vue3 官网》指南 - 学习",
+  "description": "[Vue3 官网》指南](https://cn.vuejs.org/) - 学习",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
