--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cn.vuejs.org-guide",
+  "name": "vue3-official-guide-learn",
   "version": "1.0.2",
   "description": "[Vue3 官网》指南](https://cn.vuejs.org/) - 学习",
   "scripts": {
